# ops-knowledge-assistant

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  config.py  db.py  docker-compose.yml  generate.py  generate_cli.py  generator.py  healthcheck.py  ingest_cli.py  pyproject.toml  repo_sync.py  requirements.txt  schema.sql  storage.py  sync.py  vector_store.py
.streamlit/: config.toml
data/: README.md
data/knowledge/: README.md
data/templates/: default.md
docs/: api-spec.md  architecture.md  data-model.md  gui-spec.md  operations.md  requirements.md  setup-guide.md  template-spec.md
pages/: 01_generate.py  02_knowledge.py  03_templates.py  04_search.py  05_qa.py  05_settings.py  06_repos.py  07_repos.py
src/: __init__.py  chunking.py  config.py  db.py  embedding.py  generator.py  ingestion.py  qa.py  repo_sync.py  retriever.py  schema.sql  storage.py  vector_store.py  watcher.py
tests/: test_chunking.py  test_config.py  test_generator.py  test_qa.py  test_repo_sync.py  test_retriever.py  test_storage.py  test_sync.py
